--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-icons": "^4.8.0",
     "react-image-zoom": "^1.3.1",
     "react-multi-carousel": "^2.8.4",
+    "react-paginate": "^8.2.0",
     "react-redux": "^8.0.7",
     "react-responsive-carousel": "^3.2.23",
     "react-slick": "^0.29.0",
